# pmsm-drive

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh
firmware/Microchip_Proto_samd51.X/nbproject/: configurations.xml  project.xml
firmware/src/: BatteryCharger.c  BatteryCharger.h  CMakeLists.txt  PowerControl.c  PowerControl.h  adc.c  adc.h  board_id.c  board_id.h  fault_handler.c  fault_handler.h  hall.c  hall.h  main.c  mc_Lib.c  mc_Lib.h  mc_app.c  mc_app.h  microcontroller.h  thermistors.c  thermistors.h
firmware/src/config/cgi_proto/: 001d9878_sam_d51j18a.xml  CMakeLists.txt  definitions.h  device.h  harmony-manifest-success.yml  harmony.prj  initialization.c  interrupts.c  interrupts.h  userparams.h
firmware/src/config/cgi_proto/peripheral/clock/: plib_clock.c
firmware/src/config/cgi_proto/peripheral/eic/: plib_eic.c  plib_eic.h
firmware/src/config/cgi_proto/peripheral/evsys/: plib_evsys.c
firmware/src/config/cgi_proto/peripheral/nvic/: plib_nvic.c
firmware/src/config/cgi_proto/peripheral/port/: plib_port.c  plib_port.h
firmware/src/config/cgi_proto/peripheral/sercom/usart/: plib_sercom3_usart.c  plib_sercom5_usart.c
firmware/src/config/cgi_proto/peripheral/tc/: plib_tc0.c  plib_tc2.c  plib_tc4.c
firmware/src/config/cgi_proto/peripheral/tcc/: plib_tcc0.c  plib_tcc1.c
firmware/src/packs/ATSAMD51J18A_DFP/: atsamd51j18a_compat.h  device.h
firmware/src/tests/: temp.cpp
firmware/tests/: CMakeLists.txt  main.cpp
proj/: project.Dockerfile  project.env
proj/cmake/: cgi-test.cmake  compile-definitions.cmake  coverage.cmake  linker-script.cmake  map-file.cmake  mplab-xc32-arm-2.50.cmake  unit-tests.cmake
proj/tools/: get-size  get-size-details
